# Hackathon-II

./: .dockerignore  .gitignore  PHASE-IV-DEMO-GUIDE.md  PHASE-IV.md  README.md
.specify/memory/: constitution.md
api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  check_imports.py  pyproject.toml  requirements.txt
api/src/: __init__.py  config.py  main.py
api/src/ai/: __init__.py  agent.py  client.py  conversation_service.py  errors.py  intent_router.py  prompts.py  sanitizer.py  schemas.py  task_executor.py
api/src/db/: __init__.py  connection.py
api/src/db/migrations/: env.py
api/src/db/migrations/versions/: 001_initial_schema.py  002_conversations.py
api/src/events/: __init__.py  publisher.py  schemas.py
api/src/mcp_server/: __init__.py  server.py  task_operations.py  tools.py
api/src/middleware/: __init__.py  auth.py  rate_limit.py
api/src/models/: __init__.py  base.py  conversation.py  message.py  task.py  user.py
api/src/routes/: __init__.py  ai.py  auth.py  chat.py  tasks.py
api/src/schemas/: __init__.py  auth.py  common.py  task.py
api/src/services/: __init__.py  auth_service.py  task_service.py
backend/src/: __init__.py  main.py
backend/tests/: __init__.py
frontend/: .dockerignore  .gitignore  package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
history/adr/: ADR-001-route-level-event-publishing.md
infra/: docker-compose.yml
infra/docker/: api.Dockerfile  (+1 more)
submission-final/: ARCHITECTURE.md  CHANGELOG.txt  DEMO-SCRIPT.md  README.md  TASK-LIST.txt
(+163 files in other folders)
